minor patch changes
